Remove unnecessary div block, replace with ul block

--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
 </head>
 <body>
     <div class="header">
-        <div id="logo">COMPARTE CIENCIA</div>
-        <div class="link-group">
-            <ul>
-                <li><a href="#">ve acá</a></li>
-                <li><a href="#">ve allá</a></li>
-                <li><a href="#">déjate llevar</a></li>
-            </ul>
-        </div>
+        <div id="logo">Comparte Sciencia</div>
+        <ul class="link-group">
+            <li><a href="#">ve acá</a></li>
+            <li><a href="#">ve allá</a></li>
+            <li><a href="#">déjate llevar</a></li>
+        </ul>
     </div>
 
     <div class="content-banner">
