Add visual article container; correct quote

--- a/index.html
+++ b/index.html
@@ -27,29 +27,31 @@
     </div>
 
     <div class="info-visual">
-        <div class="visual-title"></div>
-        <div class="visual-article">
-            <div class="article-image"></div>
-            <div class="article-text">Mira la imagen de este cerebro</div>
-        </div>
-        <div class="visual-article">
-            <div class="article-image"></div>
-            <div class="article-text">Mira la imagen de esta neurona<div>
-        </div>
-        <div class="visual-article">
-            <div class="article-image"></div>
-            <div class="article-text">Mira la imagen de esta ratita con casco<div>
-        </div>
-        <div class="visual-article">
-            <div class="article-image"></div>
-            <div class="article-text">Mira la imagen de Viridiana sufriendo</div>
+        <div class="visual-title">Algo más de información para ti</div>
+        <div class="visual-container">
+	        <div class="visual-article">
+	            <div class="article-image"></div>
+	            <div class="article-text">Mira la imagen de este cerebro</div>
+	        </div>
+	        <div class="visual-article">
+	            <div class="article-image"></div>
+	            <div class="article-text">Mira la imagen de esta neurona</div>
+	        </div>
+	        <div class="visual-article">
+	            <div class="article-image"></div>
+	            <div class="article-text">Mira la imagen de esta ratita con casco</div>
+	        </div>
+	        <div class="visual-article">
+	            <div class="article-image"></div>
+	            <div class="article-text">Mira la imagen de Viridiana sufriendo</div>
+	        </div>
         </div>
     </div>
 
     <div class="quote">
-        <div class="quote-text">Esta es una cita de que dijo alguien en alguna ocasión
-        y puede ser insiparora o puede ser ignorada, tal vez es importante o tal vez no</div>
-        <div class="quote-author">- El Beni</div>
+        <div class="quote-text">Esta es una cita que dijo alguien en alguna ocasión
+        y puede ser insiparora o puede ser ignorada, tal vez es importante, o tal vez no.</div>
+        <div class="quote-author">─ El Beni</div>
     </div>
 
     <div class="anouncement">
