Add announcement styling, correct orthography in html

--- a/index.html
+++ b/index.html
@@ -54,13 +54,14 @@
         <div class="quote-author">─ El Beni</div>
     </div>
 
-    <div class="anouncement">
-        <div class="anouncement-box">
-            <div class="anouncement-content">
-	            <div class="anouncement-title">Es tiempo de tomar acción</div>
-	            <div class="anouncement-description">Únete para poder recibir mucho más
+    <div class="announcement">
+        <div class="announcement-box">
+            <div class="announcement-content">
+	            <div class="announcement-title">Es tiempo de tomar acción</div>
+	            <div class="announcement-description">Únete para poder recibir mucho más
                 contenido como este aquí!</div>
-            <div class="anouncement-link">Únete ahora</div>
+            </div>
+            <div class="announcement-link">Únete ahora</div>
         </div>
     </div>
 
