--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
         </div>
     </div>
 
-    <div class="footer">Copyright © Sciencesplaining 2022</div>
+    <div class="footer">
+        <div class="footer-content">Copyright © Sciencesplaining 2022</div>
+    </div>
 </body>
 </html>
